frame/support/test/tests/derive_impl_ui/verbatim_fails_when_type_not_in_scope.stderr
error[E0412]: cannot find type `Area` in this scope
  --> tests/derive_impl_ui/verbatim_fails_when_type_not_in_scope.rs:13:10
   |
13 |     type Area = ();
   |          ^^^^ help: you might have meant to use the associated type: `Self::Area`
...
18 | #[derive_impl(DefaultShape)] // Injects type Area = Area;
   | ---------------------------- in this macro invocation
   |
   = note: this error originates in the macro `__export_tokens_tt_default_shape` which comes from the expansion of the macro `frame_support::macro_magic::forward_tokens` (in Nightly builds, run with -Z macro-backtrace for more info)
